changed the looks of tmux a bit

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,9 +20,15 @@ set -g history-limit 5000
 # Enable mouse support in copy mode
 set -g mouse on
 
+# fix titlebar
+set -g set-titles on
+set -g set-titles-string "#T"
+
 # Preserve colors from normal terminal/Vim
 set -g default-terminal "screen-256color"
+set -ga terminal-overrides ",alacritty:Tc"
 run-shell ~/clone/path/resurrect.tmux
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+# source-file ~/dotfiles/base16
 run '~/.tmux/plugins/tpm/tpm'
