feat: added vim like tmux commands

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,6 +20,15 @@ set -g set-titles-string "#T"
 # Preserve colors from normal terminal/Vim
 set -g default-terminal "screen-256color"
 set -ga terminal-overrides ",alacritty:Tc"
+set-option -s set-clipboard off
+
+# hoping for vim copy paste
+bind p paste-buffer -p
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -se c -i'
+unbind -T copy-mode-vi Enter
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'xclip -se c -i'
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'xclip -se c -i'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 # source-file ~/dotfiles/base16
