--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,6 +30,9 @@ unbind -T copy-mode-vi Enter
 bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'xclip -se c -i'
 bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'xclip -se c -i'
 
+# set fish to default shell
+set -g default-shell /bin/fish
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 # source-file ~/dotfiles/base16
 run '~/.tmux/plugins/tpm/tpm'
