fix: finally only starting one kanata and fish directly

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -23,7 +23,7 @@ set -ga terminal-overrides ",alacritty:Tc"
 set-option -s set-clipboard off
 
 # hoping for vim copy paste
-bind p paste-buffer -p
+bind P paste-buffer -p
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -se c -i'
 unbind -T copy-mode-vi Enter
