--- a/config.toml
+++ b/config.toml
@@ -11,8 +11,9 @@ rustflags = ["-C", "link-arg=-fuse-ld=lld"]
 # On Linux:
 # - Ubuntu, `sudo apt-get install lld clang`
 # - Arch, `sudo pacman -S lld clang`
+# --no-rosegment for flamegraph
 [target.x86_64-unknown-linux-gnu]
-rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]
+rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]
 # On MacOS, `brew install llvm` and follow steps in `brew info llvm`
 [target.x86_64-apple-darwin]
 rustflags = ["-C", "link-arg=-fuse-ld=lld"]
